2006-04-13 Joerg Wunsch <j@uriah.heep.sax.de>

	* par.c: Add logic to negate parallel-port signals in
	avrdude.conf using a tilde.

	Contributed by Bram Daams:
	* avrdude.conf.in: Add the "atisp" programmer entry that
	makes use of negated signals.

2006-03-28 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add entries for AT90USB{64,128}{6,7}

2006-03-23 Colin O'Flynn <coflynn@newae.com>

	Contributed by Wim Lewis, fix a few typos (patch #4987)
	* avrdude.1: Typo fix

2006-02-27 Colin O'Flynn <coflynn@newae.com>

	Contributed by Wim Lewis, add support for checking device
	signatures in detail (patch #4924 and #4925)
	* avrdude.conf.in: Add signatures
	* avrpart.c: Set default signature
	* avrpart.h: Variable for signature
	* config_gram.y: More signature reading
	* lexer.l: Define that signatures exist
	* main.c: Read signatures and check them against hardware

2006-02-21 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Fix paged flash write for AT90PWMx
	(error in datasheet).

2006-01-23 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.in: Bump version.

2006-01-17 Colin O'Flynn <coflynn@newae.com>

	* main.c: Fixed a typo in safemode variable names, fixed bug 15113
	* avrdude.conf.in : Added BS2 and pagel to M162, Patch 4766
	* main.c, stk500v2.c: Added patch 4804 from eolson@mit.edu
	Which stops sck from being writtend needlessly

2006-01-13  Joerg Wunsch <j@uriah.heep.sax.de>

	Contributed by David Moore: add support for the
	AVRISP mkII device. (Savannah patch #4789.)
	* serial.h: Declare usb_serdev_frame device descriptor.
	* stk500v2.c: Implementation of the AVRISP mkII handling.
	* usb_libusb.c: Add USB handling for short-frame delimited
	AVRISP mkII USB protocol; add distinction of different
	devices in usbdev_open().
	* jtagmkII.c: Tell usbdev_open() to search for the JTAG ICE mkII.
	* usbdevs.h: (New file.)
	* Makefile.am: Add usbdevs.h, as well as some other forgotten
	files "make distcheck" complained about.